kubernetes/manifests/gitea/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitea-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gitea.local.example.com`) # create A record in pihole
      kind: Rule
      services:
        - name: gitea-http
          port: 3000
  tls:
    secretName: local-example-com-tls # or local-example-com-staging-tls
